# ann

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  Makefile  Makefile.am  README.md  build.sh  configure.ac
docs/: specifications.md
src/: CMakeLists.txt  Makefile.am  neuron.h
src/buffer/: impulse.cpp  impulse.h
src/dendrite/: Makefile  dendrite.cpp  dendrite.h
src/neural_net/: neural_net.cpp  neural_net.h
src/neuron/: Makefile  neuron.cpp  neuron.h
src/test/: dendritetest.cpp  neurontest.cpp
test/: CMakeLists.txt  dendritetest.cpp  neurontest.cpp  testdendrite.cpp  testneural_net.cpp  testneuron.cpp
