SUBDIRS = src

bin_PROGRAMS = $(top_builddir)/bin/test/neurontest $(top_builddir)/bin/test/dendritetest

__top_builddir__bin_test_neurontest_SOURCES = test/neurontest.cpp src/neuron/neuron.cpp

__top_builddir__bin_test_dendritetest_SOURCES = test/dendritetest.cpp src/neuron/neuron.cpp src/dendrite/dendrite.cpp
