################################################################################
## THE LIBRARIES TO BUILD
################################################################################

noinst_lib_LIBRARIES = libneuron.a libdendrite.a
libneuron_a_SOURCES = neuron/neuron.cpp
libneuron_a_CXXFLAGS = $(AM_CXXFLAGS)

libdendrite_a_SOURCES = dendrite/dendrite.cpp
libdendrite_a_CXXFLAGS = $(AM_CXXFLAGS)
################################################################################

