################################################################################
## THE LIBRARIES TO BUILD
################################################################################

noinst_lib_LIBRARIES = $(top_builddir)/lib/libneuron.a $(top_builddir)/lib/libdendrite.a
noinst_libdir = $(top_builddir)/lib
__top_builddir__lib_libneuron_a_SOURCES = neuron/neuron.cpp
__top_builddir__lib_libneuron_a_CXXFLAGS = $(AM_CXXFLAGS)

__top_builddir__lib_libdendrite_a_SOURCES = dendrite/dendrite.cpp
__top_builddir__lib_libdendrite_a_CXXFLAGS = $(AM_CXXFLAGS)
################################################################################

